--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "merge-objects",
+  "name": "@iainad/merge-objects",
   "type": "module",
   "version": "1.0.0",
   "description": "Merges a number of javascript objects into a new object, preserving getter and setter methods in the process",
